# Ai-Assistant

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
config/: default.toml  development.toml
docs/architecture/: adr-001-hexagonal.md
scripts/: setup.ps1
src/gubluu/: __init__.py  __main__.py  app.py
src/gubluu/agents/: __init__.py
src/gubluu/browser/: __init__.py
src/gubluu/coding/: __init__.py
src/gubluu/conversation/: __init__.py  application.py  domain.py  infrastructure.py
src/gubluu/core/: __init__.py
src/gubluu/core/config/: __init__.py  loader.py  models.py
src/gubluu/core/di/: __init__.py  container.py
src/gubluu/core/errors/: __init__.py  base.py  domain.py  infrastructure.py
src/gubluu/core/events/: __init__.py  bus.py
src/gubluu/core/logging/: __init__.py  setup.py
src/gubluu/core/types/: __init__.py  enums.py  identifiers.py  protocols.py
src/gubluu/core/utils/: __init__.py
src/gubluu/desktop/: __init__.py
src/gubluu/memory/: __init__.py
src/gubluu/planner/: __init__.py
src/gubluu/plugins/: __init__.py
src/gubluu/security/: __init__.py
src/gubluu/study/: __init__.py
src/gubluu/ui/: __init__.py
src/gubluu/vision/: __init__.py
src/gubluu/voice/: __init__.py
tests/: conftest.py
tests/unit/: test_smoke.py
tests/unit/core/: test_app.py  test_errors.py  test_types.py
