[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gubluu"
version = "1.0.0-alpha.1"
description = "Gubluu — A production-grade AI desktop companion for Windows 11"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.12"
authors = [
    { name = "Gubluu Team" },
]
keywords = ["ai", "assistant", "desktop", "voice", "automation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "structlog>=24.4",
    "google-generativeai>=0.7.0",
    "ollama>=0.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "ruff>=0.5",
    "pre-commit>=3.8",
]

# Future dependency groups — added as milestones unlock them
# conversation = ["openai>=1.35", "google-generativeai>=0.7", "langchain-core>=0.2", "langgraph>=0.1", "httpx>=0.28"]
# voice = ["faster-whisper>=1.0", "edge-tts>=6.1", "openwakeword>=0.6", "sounddevice>=0.4", "numpy>=1.26"]
# memory = ["sqlalchemy[asyncio]>=2.0", "aiosqlite>=0.20", "alembic>=1.13", "chromadb>=0.5"]
# desktop = ["pywin32>=306", "psutil>=6.0"]
# browser = ["playwright>=1.45"]
# coding = ["gitpython>=3.1", "tree-sitter>=0.22"]
# vision = ["Pillow>=10.4", "easyocr>=1.7", "PyMuPDF>=1.24"]
# study = []  # Uses memory + conversation deps
# planner = ["APScheduler>=3.10"]
# ui = ["PySide6>=6.7", "qasync>=0.27"]
# logging = ["structlog>=24.4"]

[project.scripts]
gubluu = "gubluu.__main__:main"

# ─────────────────────────────────────────────
# Tool Configuration
# ─────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["src/gubluu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (may use real DB)",
    "e2e: End-to-end tests (full pipeline)",
    "slow: Tests that take more than 5 seconds",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "S",      # flake8-bandit (security)
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "RUF",    # ruff-specific rules
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RET",    # flake8-return
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
    "T20",    # flake8-print (no print statements)
]
ignore = [
    "ANN401",  # allow Any type in some cases
    "S101",    # allow assert in tests
    "B008",    # allow function calls in defaults (for DI)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert is fine in tests
    "ANN",     # don't require annotations in tests
    "T20",     # print is fine in tests
]
"src/gubluu/__main__.py" = [
    "T20",     # print is fine in entry point
]

[tool.ruff.lint.isort]
known-first-party = ["gubluu"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

[tool.coverage.run]
source = ["gubluu"]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "\\.\\.\\.",
]
